# PAFL_Artifact

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh
data/coverage/cpp_peglib/oracle/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/source/cpp_peglib/buggy-1/: .defects4cpp.json  peglib.h
data/source/cpp_peglib/buggy-10/: .defects4cpp.json  peglib.h
data/source/cpp_peglib/buggy-2/: .defects4cpp.json  peglib.h
data/source/cpp_peglib/buggy-3/: .defects4cpp.json
data/source/cpp_peglib/buggy-4/: .defects4cpp.json  peglib.h
data/source/cpp_peglib/buggy-5/: .defects4cpp.json
data/source/cpp_peglib/buggy-6/: .defects4cpp.json  (+1 more)
docker/: evalDLFL.py  evaluate.py  makeXLSX.py  robustness.py  train_and_run.py
docker/scripts/: caching.sh  checkout_bugscpp.sh  checkout_bugsinpy.sh  eval_aeneas.sh  eval_dlfl.sh  eval_sbfl.sh  run_aeneas.sh  run_dlfl.sh  run_sbfl.sh
example/: fault.json
example/example/: Makefile  example.c  example.h  test1.c  vulcan.yml
include/: argparser.h  stopwatch.h  stringeditor.h  utility.h
include/aggregated_ast/: ast.cpp  ast.h  cpp_ast.cpp  cpp_ast.h  index.h  node.cpp  node.h  py_ast.cpp  py_ast.h
include/model/: block.h  flmodel.h  localizer.h  updater.h
include/pipeline/: builder.h  method.h  normalizer.h  pipeline.h  pipeline.hpp
include/testsuite/: index.h  testsuite.h  testsuite.hpp  testsuite_gcov.h  testsuite_pycov.h
src/: block.cpp  flmodel.cpp  localizer.cpp  main.cpp  pipeline.cpp  testsuite.cpp  testsuite_gcov.cpp  testsuite_pycov.cpp  updater.cpp  utility.cpp
(+1324 files in other folders)
